shopping_cart/src/main/java/com/example/shopping_cart/errors/BadRequestException.java
package com.example.shopping_cart.errors;

public class BadRequestException extends RuntimeException {
    private static final Long serialVersionID = 1L;
    
    public BadRequestException(String msg) { 
        super(msg);
    }
}
